ported to liteloader 1.12.2